--- a/lib/pinboard_web/components/layouts/root.html.heex
+++ b/lib/pinboard_web/components/layouts/root.html.heex
@@ -19,6 +19,14 @@
         </li>
         <li>
           <.link
+            href={~p"/feed"}
+            class="text-[0.8125rem] leading-6 text-zinc-900 font-semibold hover:text-zinc-700"
+          >
+            Feed
+          </.link>
+        </li>
+        <li>
+          <.link
             href={~p"/users/settings"}
             class="text-[0.8125rem] leading-6 text-zinc-900 font-semibold hover:text-zinc-700"
           >
